# cserver

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  bench.py  cserve-design.txt  cserve.ini  cserve.service
.claude/: settings.local.json
fuzz/: cserve_fuzz  fuzz_parser.c  fuzz_url.c
fuzz/corpus/: invalid
fuzz/findings/default/: cmdline  fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data
fuzz/findings/default/queue/: id:000003,time:0,execs:0,orig:get_query  id:000005,time:0,execs:0,orig:invalid  id:000006,time:0,execs:0,orig:post_body  id:000007,src:000002,time:0,execs:56,op:havoc,rep:5,+cov  id:000008,src:000002,time:1,execs:67,op:havoc,rep:7  id:000009,src:000002,time:1,execs:75,op:havoc,rep:7,+cov  id:000011,src:000002,time:1,execs:92,op:havoc,rep:8  id:000012,src:000002,time:1,execs:111,op:havoc,rep:4  id:000013,src:000002,time:2,execs:120,op:havoc,rep:5  id:000014,src:000002,time:2,execs:128,op:havoc,rep:7  id:000015,src:000002,time:2,execs:139,op:havoc,rep:7  id:000017,src:000002,time:2,execs:160,op:havoc,rep:8  id:000018,src:000002,time:3,execs:171,op:havoc,rep:7  id:000019,src:000002,time:3,execs:183,op:havoc,rep:6  id:000021,src:000002,time:4,execs:203,op:havoc,rep:3  id:000022,src:000002,time:4,execs:211,op:havoc,rep:5  id:000024,src:000002,time:5,execs:238,op:havoc,rep:6  id:000025,src:000002,time:5,execs:253,op:havoc,rep:7  id:000026,src:000002,time:6,execs:270,op:havoc,rep:2  id:000027,src:000002,time:7,execs:284,op:havoc,rep:3  id:000028,src:000002,time:7,execs:295,op:havoc,rep:2  id:000029,src:000002,time:7,execs:306,op:havoc,rep:4  id:000030,src:000002,time:7,execs:316,op:havoc,rep:6,+cov  id:000031,src:000002,time:7,execs:340,op:havoc,rep:4,+cov  id:000032,src:000002,time:8,execs:367,op:havoc,rep:5  id:000033,src:000002,time:9,execs:379,op:havoc,rep:8  id:000034,src:000002,time:10,execs:401,op:havoc,rep:5  id:000036,src:000002,time:12,execs:446,op:havoc,rep:4  id:000037,src:000002,time:12,execs:469,op:havoc,rep:8,+cov  id:000038,src:000002,time:12,execs:481,op:havoc,rep:7  id:000039,src:000002,time:13,execs:500,op:havoc,rep:3  id:000040,src:000002,time:13,execs:513,op:havoc,rep:3  id:000041,src:000002,time:15,execs:657,op:havoc,rep:4  id:000042,src:000002,time:16,execs:715,op:havoc,rep:1  id:000043,src:000002,time:17,execs:754,op:havoc,rep:1  id:000044,src:000002,time:18,execs:786,op:havoc,rep:3,+cov  id:000045,src:000002,time:18,execs:822,op:havoc,rep:4  id:000046,src:000002,time:22,execs:1090,op:havoc,rep:8  id:000047,src:000002,time:35,execs:2296,op:havoc,rep:5  id:000048,src:000002,time:51,execs:3852,op:havoc,rep:7  (+139 more)
include/: cserve.h
src/: config.c  conn.c  log.c  main.c  parser.c  response.c  router.c  server.c  static.c  util.c
tests/: test_cache.c  test_parser.c  test_router.c  test_util.c
www/: index.html
